fixed overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,6 @@ body {
   -webkit-overflow-scrolling: touch;
   overscroll-behavior: contain;
   width: 100%;
-  min-height: 100vh
 }
 
 
